# discord-aoc

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env
.github/workflows/: devskim-analysis.yml  static-analysis.yml
assets/: Logo.ai
src/: aoc_command.rs  aoc_get.rs  format.rs  main.rs
