[package]
name = "discord-aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.68"
chrono = "0.4.19"


[dependencies.reqwest]
features = ["blocking"]
version = "0.11.6"


[dependencies.serde]
features = ["derive"]
version = "1.0.130"


[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"


[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"